2003-10-26  Justin Warren <justin.warren@unicity.com.au>
	* Added SNMPv2 support and fixed compatibility bugs caused
	by ucd-snmp returning Context Specific tags.

2003-09-21  Justin Warren <justin.warren@unicity.com.au>
    
	* Added licensing information to release under LGPL.

2003-09-19  Jim Crumpler  <jgc@pringle.jgc.unicity.com.au>

	* lib/libsnmp/rfc1155.py (OctetString.decodeContents): changed all
	decodeContents() methods to set the local value of the object and
	to return self.  This saves alot of object creations, however we
	need to make sure we don't use an object as a factory and expect
	its value to not change.

2003-09-18  Jim Crumpler  <jgc@pringle.jgc.unicity.com.au>

	* lib/libsnmp/rfc1155.py (Asn1Object.decode): move the tag and
	length portions of decode() to decodeTag() and decodeLength()

0.0.1     2003-08-13  Justin Warren <justin.warren@unicity.com.au>

        * First version of libsnmp added to CVS
