@@ -25,7 +25,7 @@ import time
 
 version_major = 1
 version_minor = 0
-version_build = 1
+version_build = 2
 version_devel=''
 #version_devel='-dev-' + time.strftime('%Y-%m-%d-%H%M')
 
